fix text align

--- a/frontend/src/styles/_layout.css
+++ b/frontend/src/styles/_layout.css
@@ -61,6 +61,7 @@ hr {
 }
 .card-body p {
   word-wrap: break-word;
+  text-align: justify;
 }
 .card-body p em {
   font-weight: 600;
